API exposed to retrieve all claims
