# swagger.yml
@@ -18,6 +18,27 @@ tags:
   description: "Endpoints for dealing with claims, e.g. persisting a claim."
 paths:
   /v3/claims:
+    get:
+      tags:
+      - "claim-controller"
+      summary: "Retrieve all claims."
+      operationId: "retrieveAllClaimsUsingGET"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ClaimResponseDTO"
+        "401":
+          description: "Unauthorized"
+        "403":
+          description: "Forbidden"
+        "404":
+          description: "Not Found"
+      deprecated: false
     post:
       tags:
       - "claim-controller"
@@ -200,6 +221,52 @@ definitions:
         description: "Unique reference for claim"
     title: "ClaimDTO"
     description: "An existing claim for Apply for healthy start."
+  ClaimResponseDTO:
+    type: "object"
+    properties:
+      addressLine1:
+        type: "string"
+        example: "Flat B"
+        description: "First line of the address"
+      claimStatus:
+        type: "string"
+        description: "The claim's current status"
+        enum:
+        - "REJECTED"
+        - "NEW"
+        - "PENDING"
+        - "ACTIVE"
+        - "PENDING_EXPIRY"
+        - "EXPIRED"
+        - "ERROR"
+      dateOfBirth:
+        type: "string"
+        format: "date"
+        example: "1985-12-30"
+        description: "The date of birth, in the format YYYY-MM-DD"
+      firstName:
+        type: "string"
+        example: "Jo"
+        description: "First (given) name"
+      id:
+        type: "string"
+        format: "uuid"
+        example: "96c3f8c0-f6d9-4ad4-9ed9-72fcbd8d692d"
+        description: "The claim's unique id."
+      lastName:
+        type: "string"
+        example: "Bloggs"
+        description: "Last (surname or family) name"
+      postcode:
+        type: "string"
+        example: "AA1 1AA"
+        description: "The postcode of the address."
+      reference:
+        type: "string"
+        example: "0E1567C0B2"
+        description: "Unique reference for claim"
+    title: "ClaimResponseDTO"
+    description: "Existing claim for Apply for healthy start."
   ClaimResultDTO:
     type: "object"
     properties:
